# customs-insight

./: .gitignore  pyproject.toml
.agent/: agents.md
src/: cli.py
src/domain/: models.py
src/domain/calculations/: analysis.py  date_parsing.py  pipeline.py  result_transformations.py  transformations.py
src/domain/ports/: scraper_port.py
src/domain/services/: dashboard_generator.py  data_processor.py
src/infra/adapters/: bandtrass_scraper_adapter.py  excel_reader_adapter.py
src/infra/services/: __init__.py  strategy_executor.py
src/infra/services/scraping/: __init__.py  data_downloader.py  filter_applier.py  item_searcher.py
src/infra/strategies/: dual_filter_strategy.py  scraper_strategy.py  single_filter_strategy.py
strategies/: HD현대일렉트릭.toml  SK하이닉스.toml  농심.toml  삼양.toml  에이피알.toml  파마리서치.toml  한화에어로스페이스.toml  현대로템.toml  효성중공업.toml
tests/data/: bandtrass_search.html  goods_filter_clicked.html  goods_type_selected.html  hscode_popup.html  location_filter_clicked.html  region_selected.html  result_table.html
tests/integration/: test_apr_scenario.py  test_strategy_executor.py
tests/unit/domain/: test_models.py  test_strategy_models.py
tests/unit/domain/calculations/: __init__.py  test_analysis.py  test_date_parsing.py  test_pipeline.py  test_result_transformations.py  test_transformations.py
tests/unit/domain/services/: test_data_processor.py
tests/unit/infra/: test_bandtrass_adapter.py  test_html_parser.py
tests/unit/infra/adapters/: test_excel_reader_adapter.py
